--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-html {
+/*html {
     --scrollbarBG: #d3e7f0;
     --thumbBG: #004071;
 }
@@ -14,26 +14,44 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     scrollbar-width: thin;
-    scrollbar-color: var(--thumbBG) var(--scrollbarBG)
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
 }
 
 body::-webkit-scrollbar {
-    width: .75rem
+    width: 0.75rem;
 }
 
 body::-webkit-scrollbar-track {
-    background: var(--scrollbarBG)
+    background: var(--scrollbarBG);
 }
 
 body::-webkit-scrollbar-thumb {
     background-color: var(--thumbBG);
     border-radius: 4px;
-    border: 3px solid var(--scrollbarBG)
+    border: 3px solid var(--scrollbarBG);
 }
 
 .fond {
-    background: url(../img/bmx.jpg) no-repeat center center fixed;
+     background: url(../img/bmx.jpg) no-repeat center center fixed;
     background-size: cover;
+}
+
+.indexImg1 {
+    height: calc(100vh - 55px);
+    background-size: cover;
+    background: url(../img/bmx1.jpg) no-repeat center center fixed;
+}
+
+.indexImg2 {
+    height: calc(100vh - 55px);
+    background-size: cover;
+    background: url(../img/bmx2.jpg) no-repeat center center fixed;
+}
+
+.indexImg3 {
+    height: calc(100vh - 55px);
+    background-size: cover;
+    background: url(../img/bmx3.jpg) no-repeat center center fixed;
 }
 
 .App-logo {
@@ -56,16 +74,16 @@ body::-webkit-scrollbar-thumb {
     }
 }
 
-/* #main_admin,
+ #main_admin,
 #main_user {
     padding-top: 10px;
-} */
+}
 
 .row {
     margin-bottom: 15px;
 }
 
-.root,
+ .root,
 .py-4 {
     width: 100%;
     display: flex;
@@ -74,12 +92,21 @@ body::-webkit-scrollbar-thumb {
     min-height: 100vh;
 }
 
+.root {
+     display: flex;    
+    min-height: 100vh;
+    align-items: center;
+    background-size: cover;
+    background: url(../img/bmx.jpg) no-repeat center center fixed; 
+}
+
 object {
     width: 100%;
 }
 
 .py-4 {
-    min-height: calc(100vh - 55px);
+     min-height: calc(100vh - 55px); 
+    padding: 0 !important;
 }
 
 .shadow {
@@ -90,3 +117,35 @@ object {
 .noresize {
     resize: none;
 }
+
+.textIndex {
+    font-size: 2em;
+    color: white;
+    text-align: justify;
+}
+
+.slick-slide {
+    margin-bottom: -7px !important;
+}
+
+ .slick-dots li {
+    margin: 0 16px;
+}
+.slick-dots li button:before {
+    content: " ";
+    background: #d8d8d8;
+    opacity: 1;
+    height: 4px;
+    width: 40px;
+}
+.slick-dots li.slick-active button:before {
+    content: " ";
+    background: #0080ad;
+    opacity: 1;
+    height: 4px;
+    width: 40px;
+}
+
+.slick-slider {
+    max-height: 100vh;
+} */
