--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,13 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+//@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~toastr/toastr';
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
 
 @import '../css/app.css';
+//@import 'style';
