--- a/public/css/app.css
+++ b/public/css/app.css
@@ -345,7 +345,7 @@ body,
 }
 
 .root {
-  background: url(/images/fond-index.jpg?4eaea89db7bb2bd111581259ddfc5495) no-repeat center center fixed;
+  background: url(/images/fond-index.jpg?fcb643bbe737092efd956a5f3f69840f) no-repeat center center fixed;
   background-size: cover;
   min-height: 100vh;
 }
@@ -376,11 +376,13 @@ body,
   text-align: justify;
 }
 
+.login {
+  background-image: url(/images/fond-login.jpeg?620a8701e77d37073bbd777b68ee2b02);
+}
 .login .input-group-text {
-  font-size: 0.875rem !important;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !important;
   border-right: 0 !important;
-  color: #93a5be !important;
+  color: #0d6efd !important;
   background-color: #ffffff !important;
 }
 .login .input-group .form-control:not(:first-child) {
@@ -391,6 +393,20 @@ body,
   border-color: #ced4da;
   outline: none;
   box-shadow: none;
+}
+.login .card {
+  box-shadow: 1px 1px 50px #000;
+}
+.login .card #fileIcon {
+  background-color: #0d6efd !important;
+  color: #fff !important;
+}
+.login .card #fileIcon:hover {
+  background-color: #6c6c6c !important;
+  cursor: pointer;
+}
+.login .card #photo-info {
+  padding-left: 10px !important;
 }
 
 ::-webkit-scrollbar {
@@ -17893,57 +17909,3 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
   font-weight: 400;
 }
-
-/*.flex {
-    display: flex;
-}
-
-.navbar {
-    //background-color: $light;
-    padding: 1rem 2rem;
-    border-bottom: 1px solid $cyan;
-}
-
-.sidebar {
-    width: 14rem;
-    height: 100vh;
-    //border-right: 1px solid $gray;
-    border-right: 1px solid $cyan;
-    ul {
-        list-style: none;
-        padding: 1rem 2rem;
-        li {
-            margin-bottom: 1rem;
-            a {
-                text-decoration: none;
-                &.active {
-                    //background-color: $gray;
-                }
-            }
-        }
-    }
-
-    .sidebar-background {
-        position: absolute;
-        z-index: 1;
-        height: 100%;
-        width: 100%;
-        display: block;
-        top: 0;
-        left: 0;
-        background-size: cover;
-        background-position: center center;
-    }
-
-    &:after,
-    &:before {
-        display: block;
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: 2;
-    }
-}*/
