--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -131,11 +131,11 @@ body > .navbar-collapse {
         margin-bottom: 0;
     }
 
-    .home-text {
-        font-family: "Averia", serif;
-        font-size: $font-size-large;
-        text-align: justify;
-    }
+    // .home-text {
+    //     font-family: "Averia", serif;
+    //     font-size: $font-size-large;
+    //     text-align: justify;
+    // }
 }
 
 .sidebar-inner {
