--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 @import "scrollbar";
 @import "dashboard";
 @import "navbar";
+@import "leveler";
 
 @import "~bootstrap/scss/bootstrap";
 @import "~toastr/toastr";
