--- a/resources/sass/leveler.scss
+++ b/resources/sass/leveler.scss
@@ -1,4 +1,9 @@
 .main-panel {
+    .card-leveler .card-header {
+        color: white;
+        background-color: #3490dc;
+    }
+
     .form-progress label {
         text-align: end;
     }
