--- a/resources/sass/leveler.scss
+++ b/resources/sass/leveler.scss
@@ -1,4 +1,10 @@
 .main-panel {
+    .leveler .chart-container {
+        position: relative;
+        height: 100vh;
+        width: 65vw;
+    }
+
     .card-leveler .card-header {
         color: white;
         background-color: #3490dc;
