--- a/public/css/app.css
+++ b/public/css/app.css
@@ -669,10 +669,13 @@ body > .navbar-collapse:after {
   cursor: pointer;
 }
 
-.main-panel .leveler .chart-container {
-  position: relative;
-  height: 100vh;
-  width: 65vw;
+.main-panel {
+  /* .leveler .chart-container {
+           position: relative;
+           height: 100vh;
+           width: 65vw;
+       }
+  */
 }
 .main-panel .card-leveler .card-header {
   color: white;
