--- a/public/css/app.css
+++ b/public/css/app.css
@@ -670,12 +670,11 @@ body > .navbar-collapse:after {
 }
 
 .main-panel {
-  /* .leveler .chart-container {
-           position: relative;
-           height: 100vh;
-           width: 65vw;
-       }
-  */
+  /*.profile .chart-container {
+      position: relative;
+      //height: 100vh;
+      width: 65vw;
+  }*/
 }
 .main-panel .card-leveler .card-header {
   color: white;
