--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -1,3 +1,12 @@
+.loader {
+    background-color: currentColor;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 1021;
+    display: flex;    
+}
+
 .sidebar-inner,
 body > .navbar-collapse {
     position: absolute;
@@ -147,6 +156,15 @@ body > .navbar-collapse {
         ul.ulDonation {
             list-style-type: initial;
         }
+    }
+
+    .card-leveler .card-header {
+        color: white;
+        background-color: #3490dc;
+    }
+
+    .form-progress label {
+        text-align: end;
     }
 }
 
