--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -3,11 +3,11 @@
     width: 100%;
     height: 100vh;
     position: absolute;
-    z-index: 1021;
+    z-index: 1022;
     display: flex;    
 }
 
-.sidebar-inner,
+/*.sidebar-inner,
 body > .navbar-collapse {
     position: absolute;
     top: 0;
@@ -193,4 +193,4 @@ body > .navbar-collapse {
     width: 100%;
     overflow-x: auto;
     overflow-y: hidden;
-}
+}*/
