--- a/resources/sass/_index.scss
+++ b/resources/sass/_index.scss
@@ -9,11 +9,130 @@
 }
 
 body {
-    font-size: $font-size-base !important;
+    height: 100vh;
+
+    .loader {
+        background-color: currentColor;
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        z-index: 1022;
+        display: flex;
+    }
+
+    .root {
+        background: url(../img/fond-index.jpg) no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        min-height: 100vh;
+
+        &:after,
+        &:before {
+            display: block;
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+        }
+
+        &:before {
+            opacity: 0.7;
+            background: #000000;
+        }
+
+        &:after {
+            opacity: 1;
+        }
+
+        .container {
+            z-index: 1;
+            position: relative;
+            font-family: $font-family-serif;
+
+            .textIndex {
+                color: white;
+                text-align: justify;
+                font-size: $font-size-large;
+            }
+
+            .row {
+                margin-bottom: 1rem;
+            }
+
+            @media (max-width: 768px) {
+                &,
+                .btn {
+                    font-size: $font-size-medium;
+                }
+            }
+
+            @media (max-width: 576px) {
+                &,
+                .btn {
+                    font-size: $font-size-small;
+                }
+            }
+        }
+    }
+
+    /*.index {
+        nav {
+            margin: 0 -12px;
+
+            a.dropdown-toggle {
+                color: white;
+            }
+
+            img {
+                max-height: 3.1rem;
+            }
+
+            ul.dropdown-menu {
+                left: inherit;
+                right: 0px;
+            }
+        }
+
+        .login {
+            height: calc(100vh - 76px);
+            align-items: center;
+            justify-content: center;
+        }
+    }*/
+
+    #app {
+        height: 100%;
+        display: flex;
+        position: relative;
+
+        main {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            overflow-y: auto;
+
+            button {
+                // color: #fff;
+                font-size: 1rem;
+            }
+
+            @media (min-width: 576px) {
+                .float-sm-right {
+                    float: right !important;
+                }
+            }
+        }
+    }
 }
 
-.row {
-    margin-bottom: 1rem;
+/*
+
+body {
+    font-size: $font-size-base !important;
 }
 
 body,
@@ -26,43 +145,4 @@ body,
     top: 0;
     height: 100vh;
 }
-
-.root {
-    background: url(../img/fond-index.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    min-height: 100vh;
-
-    &:after,
-    &:before {
-        display: block;
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-    }
-
-    &:before {
-        opacity: 0.7;
-        background: #000000;
-    }
-
-    &:after {
-        opacity: 1;
-    }
-
-    .container {
-        position: relative;
-        z-index: 1;
-        .textIndex {
-            font-size: $font-size-large;
-            font-family: $font-family-serif;
-            color: white;
-            text-align: justify;
-        }
-    }
-}
+*/
