--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,11 +2,13 @@
 $body-bg: #f8fafc;
 
 // Typography
-//$font-family-sans-serif: 'Nunito', sans-serif;
 $font-family-serif: "Averia", serif;
 $font-family-sans-serif: "Lato", sans-serif;
 $font-size-base: 1.15rem;
 $line-height-base: 1.6;
+$font-size-large: 1.5rem;
+$font-size-medium: 1rem;
+$font-size-small: 0.85rem;
 
 // Colors
 $blue: #3490dc;
@@ -20,12 +22,12 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $white-color: #ffffff;
-$dark    : #262B40;
+$dark: #262b40;
+$highlight-color: #dee2ec;
 
-$sidebar-width: calc(100% - 256px);
+// $sidebar-width: calc(100% - 256px);
 
-$padding-small-vertical: 5px;
-$padding-zero: 0px;
-$font-size-large: 1.5rem;
-$font-weight-normal: 400;
-$navbar-padding-a: 10px 15px;
+// $padding-small-vertical: 5px;
+// $padding-zero: 0px;
+// $font-weight-normal: 400;
+// $navbar-padding-a: 10px 15px;
