--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,19 +1,21 @@
 // Fonts
-//@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 @import "variables";
 
-@import "index";
-@import "login";
-@import "scrollbar";
-@import "dashboard";
-@import "navbar";
+// @import "scrollbar";
+// @import "dashboard";
 
 @import "~bootstrap/scss/bootstrap";
-@import "~toastr/toastr";
-@import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css";
+// @import "~slick-carousel/slick/slick.css";
+// @import "~slick-carousel/slick/slick-theme.css";
 @import "~@fortawesome/fontawesome-free/css/fontawesome";
 @import "~@fortawesome/fontawesome-free/css/regular";
 @import "~@fortawesome/fontawesome-free/css/solid";
 @import "~@fortawesome/fontawesome-free/css/brands";
+@import "~react-pro-sidebar/dist/scss/styles.scss";
+@import "~toastr/toastr";
+
+@import "index";
+@import "login";
+@import "sidebar";
+@import "navbar";
